# LiveConfig

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: liveconfig.yml
LiveConfig/: __init__.py  core.py  decorators.py  file_handling.py  liveconfig.py  livevariable.py  manager.py  registration.py  start_interface.py  typechecker.py
LiveConfig/definitions/: livevariable.py
LiveConfig/interfaces/cli/: cli.py
LiveConfig/interfaces/web/: server.py
LiveConfig/interfaces/web/frontend/static/: script.js  style.css
LiveConfig/interfaces/web/frontend/templates/: base.html  classes.html  functions.html  index.html  triggers.html  variables.html
examples/: cli_example.py  opencv_example.py  web_example.py
livevars/: __init__.py  core.py  decorators.py  file_handling.py  manager.py  start_interface.py
livevars/interfaces/cli/: cli.py
livevars/interfaces/web/: server.py
livevars/interfaces/web/frontend/static/: style.css
livevars/interfaces/web/frontend/templates/: base.html  classes.html  functions.html  index.html
tests/: test_liveclass_multiple_classes.py  test_liveclass_one_class.py  test_manager_liveclass_multiple_classes.py  test_manager_liveclass_one_class.py  test_manager_livefunction_multiple_functions.py  test_manager_livefunction_one_function.py  test_setup.py
tests/filehandler/: test_filehandler_added_to_manager.py  test_filehandler_load_values.py  test_filehandler_save_instances.py
tests/functiontrigger/: test_function_trigger_register.py  test_function_trigger_trigger.py
tests/liveclass/: test_liveclass_multiple_classes.py  test_liveclass_one_class.py
tests/livefunction/: test_livefunction_one_function.py
tests/liveinstance/: test_liveinstance_modify_attr.py  test_liveinstance_multiple_instances.py  test_liveinstance_one_instance.py
tests/livevariable/: test_live_variable_registers.py  test_live_variable_reload.py  test_live_variable_saving.py  test_live_variable_update_value.py
tests/manager/: test_manager_get_all_functions.py  test_manager_get_function_by_name.py  test_manager_get_live_instance_attr_by_name.py  test_manager_get_liveinstance_by_name.py  test_manager_liveclass_multiple_classes.py  test_manager_liveclass_one_class.py  test_manager_livefunction_multiple_functions.py  test_manager_livefunction_one_function.py  test_manager_liveinstance_modify_attr.py  test_manager_set_liveinstance_attr_by_name.py
