[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liveconfig"
version = "0.0.2"
description = "Python package for developers which allows the live editing of variables, classes, and functions to ease development of large python programs. LiveConfig will allow you to interact with values during program execution through an interface of your choice. Values can be saved, and loaded on startup."
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Fergus Gault", email = "gaultfergus@gmail.com"}
]
homepage = "https://github.com/Fergus-Gault/LiveConfig"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.dependencies]
prompt_toolkit = "*"
flask = "*"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"liveconfig.web" = ["frontend/templates/*.html", "frontend/static/*.css"]
