[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "liveconfig"
version = "0.0.2"
authors = [
    {name="Fergus Gault", email="gaultfergus@gmail.com"}
]
description = "Python package for developers which allows the live editing of variables, classes, and functions to ease development of large python programs. LiveConfig will allow you to interact with values during program execution through an interface of your choice. Values can be saved, and loaded on startup."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "prompt_toolkit",
    "flask",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"liveconfig.web.frontend" = ["/templates/*.html", "/static/*.css"]

[project.urls]
Homepage = "https://github.com/Fergus-Gault/LiveConfig"